Disable strict mode. Fix overflow bug. More breakdown graph inputs

--- a/frontend/src/Monitor/Charts/Charts.css
+++ b/frontend/src/Monitor/Charts/Charts.css
@@ -6,3 +6,9 @@
     height: 100%;
     box-shadow: 6px 6px #121212;
 }
+
+.chartForm {
+    padding-top: 12px;
+    padding-left: 12px;
+    text-align: left;
+}
